--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-aug 20 2013 corrected domain and client-level syncs
+aug 20 2013 corrected domain and client-level pleskrestore calls, updated syncdomdatabases to get parked domains too
 
 june 18 2013 changed rsync output to log instead, and cleaned up temp folder creation.
 
