--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-aug 21 2013 added reminders() for user friendliness
+aug 21 2013 added reminders() for user friendliness, updated pleskhosts.sh inside the script to match the version in git
 
 aug 20 2013 corrected domain and client-level pleskrestore calls, updated syncdomdatabases to get parked domains too
 
