--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+aug 23 2013 don't install bind if you dont have to
+
 aug 21 2013 added reminders() for user friendliness, updated pleskhosts.sh inside the script to match the version in git
 
 aug 20 2013 corrected domain and client-level pleskrestore calls, updated syncdomdatabases to get parked domains too
