--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+oct 24 2013 added case for RHEL in rsyncupgrade(), added -ignore-sign to all calls of pleskrestore for better plesk11 compatibility
+
 aug 23 2013 don't install bind if you dont have to
 
 aug 21 2013 added reminders() for user friendliness, updated pleskhosts.sh inside the script to match the version in git
